[gd_scene load_steps=2 format=3 uid="uid://dm6oog8hjgbeu"]

[ext_resource type="Script" path="res://scenes/Menus/GameOver.gd" id="1_3c5m1"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c5m1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -124.0
offset_right = 43.5
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Score"
horizontal_alignment = 1

[node name="DayCompleted" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Days"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = 71.0
offset_right = 32.5
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="Restart" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = " Restart "

[node name="Quit" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[connection signal="pressed" from="VBoxContainer2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
